# ragl

./: LICENSE  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml
ragl/: __init__.py  config.py  constants.py  embedder.py  engine.py  exceptions.py  manager.py  protocols.py  ragstore.py  registry.py  retriever.py  schema.py  textunit.py  tokenizer.py  util.py
ragl/embed/: sentencetransformer.py
ragl/storage/: redis.py
ragl/store/: redis.py
tests/functional/ragl/: test_manager.py  test_ragstore.py  test_registry.py
tests/functional/ragl/embed/: test_sentencetransformer.py
tests/functional/ragl/store/: test_redis.py
tests/integration/: concept.py  rough.py  sentencetransformer_redis.py
