[tool.mypy]
files = ["ragl/"]
show_error_codes = true

#[tool.pylint]
#output-format = "json"

[tool.ruff]
extend-exclude = ["tests/"]
#output-format = "json"
line-length = 80

[tool.ruff.lint]
preview = true
ignore = ["D203", "D212", "D413"]
extend-select = ["W", "E", "D"]

[build-system]
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ragl" = ["py.typed"]

[project]
name = "ragl"
version = "0.1.0"
dependencies = [
    "numpy",
    "psutil",
    "redis",
    "redisvl",
    "sentence-transformers",
    "tiktoken",
]
requires-python = ">=3.11"
authors = [
    {name = "Andrew Schenck", email = "aschenck@gmail.com"},
]
description=""
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.optional-dependencies]
test = [
    "coverage",
    "mypy",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-cov",
]
